--- a/gemfile
+++ b/gemfile
@@ -2,8 +2,8 @@ source 'https://rubygems.org'
 
 gem 'rails', '3.2.11'
 
-group :development :test do
-gem 'sqlite3', '1.3.5'
+group :production do
+gem 'pg'
 end
 
 
